rules.v4
# Generated by iptables-save v1.8.9 (nf_tables) on Wed Dec 31 13:57:59 2025
*raw
:PREROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT
# Completed on Wed Dec 31 13:57:59 2025
# Generated by iptables-save v1.8.9 (nf_tables) on Wed Dec 31 13:57:59 2025
*filter
:INPUT DROP [1999:365028]
:FORWARD DROP [78698:37765671]
:OUTPUT ACCEPT [468151:498191071]
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 192.168.22.0/24 -i wlan0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 192.168.22.0/24 -i wlan0 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -s 192.168.22.0/24 -d 192.168.22.1/32 -i wlan0 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -s 192.168.22.0/24 -d 192.168.22.1/32 -i wlan0 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -s 192.168.22.0/24 -d 224.0.0.251/32 -i wlan0 -p udp -m udp --dport 5353 -j ACCEPT
-A FORWARD -i wlan0 -o wlan0 -j ACCEPT
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i wlan0 -o eth0 -m set --match-set allowed_internet src -j ACCEPT
COMMIT
# Completed on Wed Dec 31 13:57:59 2025
# Generated by iptables-save v1.8.9 (nf_tables) on Wed Dec 31 13:57:59 2025
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -o eth0 -m set --match-set allowed_internet src -j MASQUERADE
COMMIT
# Completed on Wed Dec 31 13:57:59 2025
